--- a/index.html
+++ b/index.html
@@ -101,9 +101,73 @@
           <a href="#" class="nav-link-mobile">Suporte</a>
         </li>
       </ul>
-
     </div>
   </header>
+
+  <!--IPHONE SE-->
+  <section class="iphonese">
+    <div class="container-iphonese">
+      <div class="container-title-iphonese">
+        <h1>iPhone SE</h1>
+        <h3 style="color: azure;">
+          É muito iPhone por menos.
+        </h3>
+        <p>
+          <a href="" class="link">Saiba mais</a>
+          <a href=""  class="link">Comprar</a>
+        </p>
+      </div>
+      <div class="container-img-iphonese">
+        <img src="img/iphonese.png" alt="">
+      </div>
+    </div>
+  </section>
+
+  <!--Iphone 11-->
+  <section class="iphone11">
+    <div class="container-iphone11">
+      <div class="container-title-iphone11">
+        <h1>iPhone 11</h1>
+        <h3>
+          Tudo na media certa
+        </h3>
+        <p>
+          <a href="" class="link">Saiba mais</a>
+          <a href=""  class="link">Comprar</a>
+        </p>
+      </div>
+    </div>
+  </section>
+
+   <!--products-->
+  <section class="products">
+    <div class="watch">
+      <div class="container-title-watch">
+        <h1></h1>
+        <h3>
+          Com tela Retina Sempre ativa. Um relógio como você nunca viu.
+        </h3>
+        <p>
+          <a href="" class="link">Saiba mais</a>
+          <a href="" class="link">Comprar</a>
+        </p>
+      </div>
+      <img src="img/watch2.png" alt="" />
+    </div>
+    <div class="airpods">
+      <div class="container-title-airpods">
+        <h1>AirPods Pro</h1>
+        <h3>
+          Magia como você nunca ouviu.
+        </h3>
+        <p>
+          <a href="" class="link">Saiba mais</a>
+          <a href="" class="link">Comprar</a>
+        </p>
+      </div>
+      <img src="img/airpods2.png" alt="" />
+    </div>
+  </section>
 
   <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
 
